--- a/posts/azure-active-directory-setup.mdx
+++ b/posts/azure-active-directory-setup.mdx
@@ -80,7 +80,7 @@ I assigned each user *First name* and *Last name* fields. The *Object ID* field 
 
 ![built in user attributes](/images/190/built-in-user-attributes.jpg)
 
-I then did an initial login for each user with the following steps in a new Incognito browser window, to configure the user for MFA, as Entra ID requires. I used the Google authenticator app on my mobile device.
+I then did an initial login for each user with the following steps in a new incognito browser window, to configure the user for MFA, as Entra ID requires. I used the Google authenticator app on my mobile device.
 
 - In the Entra ID Portal, reset the user’s password to get a temporary one.
 - Login to the SPA and reset the password when prompted.
