--- a/posts/basicspa-codingkeypoints.mdx
+++ b/posts/basicspa-codingkeypoints.mdx
@@ -267,7 +267,7 @@ public async handleLoginResponse(): Promise<void> {
 }
 ```
 
-The above code demonstrates *deep linking*, where a user bookmarks a location like *http://localhost/spa/#company=2*, then access it in a new browser session. After signing in, the user returns to their bookmarked location.
+The above code demonstrates *deep linking*, where a user bookmarks a location like *http://localhost/spa/#company=2*, then accesses it in a new browser session. After signing in, the user returns to their bookmarked location.
 
 ### Rendering User Info
 
