--- a/posts/azure-ad-troubleshooting.mdx
+++ b/posts/azure-ad-troubleshooting.mdx
@@ -191,7 +191,7 @@ Entra ID has some vendor-specific behaviour for userinfo and access tokens which
 
 ### Where Are We?
 
-I explained the types of technique you may have to use during OAuth integrations. Ideally, authorization server providers should follow OAuth standards, though many of them implement custom behavior that makes portability non-trivial. I always aim to keep the code in my APIs and clients as standards-based as possible, to give myself the best future choices.
+I explained the types of technique you may have to use during OAuth integrations. Ideally, authorization server providers should follow OAuth standards, though many of them implement custom behaviour that makes portability non-trivial. I always aim to keep the code in my APIs and clients as standards-based as possible, to give myself the best future choices.
 
 ### Next
 
