--- a/posts/effective-api-logging.mdx
+++ b/posts/effective-api-logging.mdx
@@ -170,7 +170,7 @@ By default, this blog’s APIs output production JSON logs at all stages of the 
 
 ### Logging Framework Customization
 
-Logging frameworks typically implement JSON logging by first adding their own fields, then encoding the JSON payload into a *message* field. This blog instead uses pure JSON, for best readability on development computers. In the API implementations, there is quite a bit of plumbing code to enable my exact preferred behavior. It can be worth the effort though, to enable the best readability for users of logs.
+Logging frameworks typically implement JSON logging by first adding their own fields, then encoding the JSON payload into a *message* field. This blog instead uses pure JSON, for best readability on development computers. In the API implementations, there is quite a bit of plumbing code to enable my exact preferred behaviour. It can be worth the effort though, to enable the best readability for users of logs.
 
 ### JSON Output
 
