--- a/posts/improved-spa-code-sample-overview.mdx
+++ b/posts/improved-spa-code-sample-overview.mdx
@@ -1,6 +1,6 @@
 # Updated SPA and API – Overview
 
-Previously I summarised the use of <Link href='/posts/id-tokens'>ID Tokens</Link> in applications. Next I explain how to complete the initial SPA and API code sample, to add the main frontend session behaviors and to add claims-based authorization to the API.
+Previously I summarised the use of <Link href='/posts/id-tokens'>ID Tokens</Link> in applications. Next I explain how to complete the initial SPA and API code sample, to add the main frontend session behaviours and to add claims-based authorization to the API.
 
 ### New Features
 
@@ -260,7 +260,7 @@ A boolean flag is also stored in session storage after logout. Other tabs use th
 
 ### Where Are We?
 
-I have added missing features to the SPA and API behavior, to improve SPA session management and to enable the API to authorize requests correctly. Overall security and token renewal still have some issues, which I resolve later, in the <Link href='/posts/final-spa-overview'>Final SPA</Link>.
+I have added missing features to the SPA and API behaviour, to improve SPA session management and to enable the API to authorize requests correctly. Overall security and token renewal still have some issues, which I resolve later, in the <Link href='/posts/final-spa-overview'>Final SPA</Link>.
 
 ### Next
 
